--- a/UiChessWebApp/src/app/components/board/board.component.html
+++ b/UiChessWebApp/src/app/components/board/board.component.html
@@ -1,28 +1,100 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head>
-
+</head> -->
+<html lang="en">
 <body>
     <div>
         <h3>Welcome to ChessWebapp</h3>
         <div class="chessboard">
+<div class="b"><span id="cell-0-0-a"></span></div>
+<div class="a"><span id="cell-0-1-b"></span></div>
+<div class="b"><span id="cell-0-2-c"></span></div>
+<div class="a"><span id="cell-0-3-d"></span></div>
+<div class="b"><span id="cell-0-4-e"></span></div>
+<div class="a"><span id="cell-0-5-f"></span></div>
+<div class="b"><span id="cell-0-6-g"></span></div>
+<div class="a"><span id="cell-0-7-h"></span></div>
 
-            <!-- Row 1: Black major pieces -->
-            <div class="b">&#9820;</div>
-            <div class="a">&#9822;</div>
-            <div class="b">&#9821;</div>
-            <div class="a">&#9819;</div>
-            <div class="b">&#9818;</div>
-            <div class="a">&#9821;</div>
-            <div class="b">&#9822;</div>
-            <div class="a">&#9820;</div>
+<div class="a"><span id="cell-1-0-a"></span></div>
+<div class="b"><span id="cell-1-1-b"></span></div>
+<div class="a"><span id="cell-1-2-c"></span></div>
+<div class="b"><span id="cell-1-3-d"></span></div>
+<div class="a"><span id="cell-1-4-e"></span></div>
+<div class="b"><span id="cell-1-5-f"></span></div>
+<div class="a"><span id="cell-1-6-g"></span></div>
+<div class="b"><span id="cell-1-7-h"></span></div>
 
-            <!-- Row 2: Black pawns -->
+<div class="b"><span id="cell-2-0-a"></span></div>
+<div class="a"><span id="cell-2-1-b"></span></div>
+<div class="b"><span id="cell-2-2-c"></span></div>
+<div class="a"><span id="cell-2-3-d"></span></div>
+<div class="b"><span id="cell-2-4-e"></span></div>
+<div class="a"><span id="cell-2-5-f"></span></div>
+<div class="b"><span id="cell-2-6-g"></span></div>
+<div class="a"><span id="cell-2-7-h"></span></div>
+
+<div class="a"><span id="cell-3-0-a"></span></div>
+<div class="b"><span id="cell-3-1-b"></span></div>
+<div class="a"><span id="cell-3-2-c"></span></div>
+<div class="b"><span id="cell-3-3-d"></span></div>
+<div class="a"><span id="cell-3-4-e"></span></div>
+<div class="b"><span id="cell-3-5-f"></span></div>
+<div class="a"><span id="cell-3-6-g"></span></div>
+<div class="b"><span id="cell-3-7-h"></span></div>
+
+<div class="b"><span id="cell-4-0-a"></span></div>
+<div class="a"><span id="cell-4-1-b"></span></div>
+<div class="b"><span id="cell-4-2-c"></span></div>
+<div class="a"><span id="cell-4-3-d"></span></div>
+<div class="b"><span id="cell-4-4-e"></span></div>
+<div class="a"><span id="cell-4-5-f"></span></div>
+<div class="b"><span id="cell-4-6-g"></span></div>
+<div class="a"><span id="cell-4-7-h"></span></div>
+
+<div class="a"><span id="cell-5-0-a"></span></div>
+<div class="b"><span id="cell-5-1-b"></span></div>
+<div class="a"><span id="cell-5-2-c"></span></div>
+<div class="b"><span id="cell-5-3-d"></span></div>
+<div class="a"><span id="cell-5-4-e"></span></div>
+<div class="b"><span id="cell-5-5-f"></span></div>
+<div class="a"><span id="cell-5-6-g"></span></div>
+<div class="b"><span id="cell-5-7-h"></span></div>
+
+<div class="b"><span id="cell-6-0-a"></span></div>
+<div class="a"><span id="cell-6-1-b"></span></div>
+<div class="b"><span id="cell-6-2-c"></span></div>
+<div class="a"><span id="cell-6-3-d"></span></div>
+<div class="b"><span id="cell-6-4-e"></span></div>
+<div class="a"><span id="cell-6-5-f"></span></div>
+<div class="b"><span id="cell-6-6-g"></span></div>
+<div class="a"><span id="cell-6-7-h"></span></div>
+
+<div class="a"><span id="cell-7-0-a"></span></div>
+<div class="b"><span id="cell-7-1-b"></span></div>
+<div class="a"><span id="cell-7-2-c"></span></div>
+<div class="b"><span id="cell-7-3-d"></span></div>
+<div class="a"><span id="cell-7-4-e"></span></div>
+<div class="b"><span id="cell-7-5-f"></span></div>
+<div class="a"><span id="cell-7-6-g"></span></div>
+<div class="b"><span id="cell-7-7-h"></span></div>
+
+
+<!--            
+            <div class="b" id="cell-0-0-a"></div>
+            <div class="a" id="cell-0-1-b"></div>
+            <div class="b" id="cell-0-1-c"></div>
+            <div class="a"></div>
+            <div class="b"></div>
+            <div class="a"></div>
+            <div class="b"></div>
+            <div class="a"></div>
+
+           
             <div class="a">&#9823;</div>
             <div class="b">&#9823;</div>
             <div class="a">&#9823;</div>
@@ -32,7 +104,7 @@
             <div class="a">&#9823;</div>
             <div class="b">&#9823;</div>
 
-            <!-- Row 3 -->
+           
             <div class="b"></div>
             <div class="a"></div>
             <div class="b"></div>
@@ -42,7 +114,7 @@
             <div class="b"></div>
             <div class="a"></div>
 
-            <!-- Row 4 -->
+          
             <div class="a"></div>
             <div class="b"></div>
             <div class="a"></div>
@@ -52,7 +124,7 @@
             <div class="a"></div>
             <div class="b"></div>
 
-            <!-- Row 5 -->
+           
             <div class="b"></div>
             <div class="a"></div>
             <div class="b"></div>
@@ -62,7 +134,7 @@
             <div class="b"></div>
             <div class="a"></div>
 
-            <!-- Row 6 -->
+            
             <div class="a"></div>
             <div class="b"></div>
             <div class="a"></div>
@@ -72,7 +144,7 @@
             <div class="a"></div>
             <div class="b"></div>
 
-            <!-- Row 7: White pawns -->
+           
             <div class="b">&#9817;</div>
             <div class="a">&#9817;</div>
             <div class="b">&#9817;</div>
@@ -82,7 +154,7 @@
             <div class="b">&#9817;</div>
             <div class="a">&#9817;</div>
 
-            <!-- Row 8: White major pieces -->
+           
             <div class="a">&#9814;</div>
             <div class="b">&#9816;</div>
             <div class="a">&#9815;</div>
@@ -90,7 +162,7 @@
             <div class="a">&#9812;</div>
             <div class="b">&#9815;</div>
             <div class="a">&#9816;</div>
-            <div class="b">&#9814;</div>
+            <div class="b">&#9814;</div> -->
 
         </div>
     </div>
