-Added entity framework for saving chess state in database

--- a/UiChessWebApp/src/app/components/board/board.component.html
+++ b/UiChessWebApp/src/app/components/board/board.component.html
@@ -11,7 +11,7 @@
     <div>
         <h3>Welcome to ChessWebapp</h3>
         <div class="chessboard">
-<div class="b"><span id="cell-0-0-a"></span></div>
+<div class="b" (mouseover)="over()"><span id="cell-0-0-a"></span></div>
 <div class="a"><span id="cell-0-1-b"></span></div>
 <div class="b"><span id="cell-0-2-c"></span></div>
 <div class="a"><span id="cell-0-3-d"></span></div>
