--- a/UiChessWebApp/src/app/components/board/board.component.html
+++ b/UiChessWebApp/src/app/components/board/board.component.html
@@ -22,32 +22,263 @@
   <span cdkDrag id="cell-0-1-b"></span>
 </div>
 
-<div class="b"><span id="cell-0-2-c"></span></div>
-<div class="a"><span id="cell-0-3-d"></span></div>
-<div class="b"><span id="cell-0-4-e"></span></div>
-<div class="a"><span id="cell-0-5-f"></span></div>
-<div class="b"><span id="cell-0-6-g"></span></div>
-<div class="a"><span id="cell-0-7-h"></span></div>
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-0-2-c' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-0-2-c"></span>
+</div>
 
-<div class="a"><span id="cell-1-0-a"></span></div>
-<div class="b"><span id="cell-1-1-b"></span></div>
-<div class="a"><span id="cell-1-2-c"></span></div>
-<div class="b"><span id="cell-1-3-d"></span></div>
-<div class="a"><span id="cell-1-4-e"></span></div>
-<div class="b"><span id="cell-1-5-f"></span></div>
-<div class="a"><span id="cell-1-6-g"></span></div>
-<div class="b"><span id="cell-1-7-h"></span></div>
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-0-3-d' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-0-3-d"></span>
+</div>
 
-<div class="b"><span id="cell-2-0-a"></span></div>
-<div class="a"><span id="cell-2-1-b"></span></div>
-<div class="b"><span id="cell-2-2-c"></span></div>
-<div class="a"><span id="cell-2-3-d"></span></div>
-<div class="b"><span id="cell-2-4-e"></span></div>
-<div class="a"><span id="cell-2-5-f"></span></div>
-<div class="b"><span id="cell-2-6-g"></span></div>
-<div class="a"><span id="cell-2-7-h"></span></div>
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-0-4-e' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-0-4-e"></span>
+</div>
 
-<div class="a"><span id="cell-3-0-a"></span></div>
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-0-5-f' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-0-5-f"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-0-6-g' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-0-6-g"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-0-7-h' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-0-7-h"></span>
+</div>
+
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-1-0-a' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-1-0-a"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-1-1-b' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-1-1-b"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-1-2-c' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-1-2-c"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-1-3-d' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-1-3-d"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-1-4-e' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-1-4-e"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-1-5-f' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-1-5-f"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-1-6-g' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-1-6-g"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-1-7-h' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-1-7-h"></span>
+</div>
+
+<!-- ROW 2 -->
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-2-0-a' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-2-0-a"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-2-1-b' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-2-1-b"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-2-2-c' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-2-2-c"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-2-3-d' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-2-3-d"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-2-4-e' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-2-4-e"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-2-5-f' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-2-5-f"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-2-6-g' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-2-6-g"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-2-7-h' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-2-7-h"></span>
+</div>
+<!-- ROW 3 -->
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-3-0-a' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-3-0-a"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-3-1-b' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-3-1-b"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-3-2-c' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-3-2-c"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-3-3-d' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-3-3-d"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-3-4-e' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-3-4-e"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-3-5-f' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-3-5-f"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-3-6-g' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-3-6-g"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-3-7-h' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-3-7-h"></span>
+</div>
+
+<!-- ROW 4 -->
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-4-0-a' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-4-0-a"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-4-1-b' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-4-1-b"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-4-2-c' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-4-2-c"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-4-3-d' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-4-3-d"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-4-4-e' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-4-4-e"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-4-5-f' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-4-5-f"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-4-6-g' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-4-6-g"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-4-7-h' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-4-7-h"></span>
+</div>
+
+<!-- ROW 5 -->
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-5-0-a' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-5-0-a"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-5-1-b' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-5-1-b"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-5-2-c' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-5-2-c"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-5-3-d' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-5-3-d"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-5-4-e' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-5-4-e"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-5-5-f' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-5-5-f"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-5-6-g' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-5-6-g"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-5-7-h' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-5-7-h"></span>
+</div>
+
+<!-- ROW 6 -->
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-6-0-a' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-6-0-a"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-6-1-b' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-6-1-b"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-6-2-c' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-6-2-c"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-6-3-d' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-6-3-d"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-6-4-e' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-6-4-e"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-6-5-f' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-6-5-f"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-6-6-g' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-6-6-g"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-6-7-h' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-6-7-h"></span>
+</div>
+
+<!-- ROW 7 -->
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-7-0-a' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-7-0-a"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-7-1-b' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-7-1-b"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-7-2-c' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-7-2-c"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-7-3-d' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-7-3-d"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-7-4-e' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-7-4-e"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-7-5-f' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-7-5-f"></span>
+</div>
+
+<div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-7-6-g' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-7-6-g"></span>
+</div>
+
+<div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-7-7-h' }" (cdkDropListDropped)="drop($event)">
+  <span id="cell-7-7-h"></span>
+</div>
+
+
+<!-- <div class="a"><span id="cell-3-0-a"></span></div>
 <div class="b"><span id="cell-3-1-b"></span></div>
 <div class="a"><span id="cell-3-2-c"></span></div>
 <div class="b"><span id="cell-3-3-d"></span></div>
@@ -90,7 +321,7 @@
 <div class="a"><span id="cell-7-4-e"></span></div>
 <div class="b"><span id="cell-7-5-f"></span></div>
 <div class="a"><span id="cell-7-6-g"></span></div>
-<div class="b"><span id="cell-7-7-h"></span></div>
+<div class="b"><span id="cell-7-7-h"></span></div> -->
 
 
 <!--            
