--- a/UiChessWebApp/src/app/components/board/board.component.html
+++ b/UiChessWebApp/src/app/components/board/board.component.html
@@ -15,15 +15,15 @@
 <div class="a" cdkDropList  (cdkDropListDropped)="drop($event)"><span id="cell-0-1-b" (mouseover)="over('cell-0-1-b')"></span></div> -->
 
 <div class="b" cdkDropList  [cdkDropListData]="{ id: 'cell-0-0-a' }" (cdkDropListDropped)="drop($event)">
-  <span cdkDrag id="cell-0-0-a" (cdkDragStarted)="onDragStart($event)"></span>
+  <span cdkDrag id="cell-0-0-a" (cdkDragStarted)="onDragStart($event)" [cdkDragData]="{ id: 'cell-0-0-a' }"></span>
 </div>
 
 <div class="a" cdkDropList  [cdkDropListData]="{ id: 'cell-0-1-b' }" (cdkDropListDropped)="drop($event)">
-  <span cdkDrag id="cell-0-1-b"></span>
+  <span cdkDrag id="cell-0-1-b" [cdkDragData]="{ id: 'cell-0-0-t' }"></span>
 </div>
 
 <div class="b" cdkDropList [cdkDropListData]="{ id: 'cell-0-2-c' }" (cdkDropListDropped)="drop($event)">
-  <span id="cell-0-2-c"></span>
+  <span cdkDrag id="cell-0-2-c"></span>
 </div>
 
 <div class="a" cdkDropList [cdkDropListData]="{ id: 'cell-0-3-d' }" (cdkDropListDropped)="drop($event)">
